libs/extractor/tests/snapshots/snapshots/extractor__tests__apply_var_typography-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Text} from '@devup-ui/core'\n        <Text typography={bo ? a : b} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "<span className={bo ? a ? `typo-${a}` : \"\" : b ? `typo-${b}` : \"\"} />;\n",
}
